Remove useless files + Create contact route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <header>
   <h1>{{'APP_TITLE' | translate}}</h1>
   <app-language-selector></app-language-selector>
+  <nav>
+    <a routerLink="/">Home</a> |
+    <a routerLink="/contact">Contact</a>
+  </nav>
 </header>
 
 <router-outlet></router-outlet>
