--- a/src/app/i18n/container/language-selector/language-selector.component.html
+++ b/src/app/i18n/container/language-selector/language-selector.component.html
@@ -1,4 +1,6 @@
 <div>
-  <button (click)="setLanguage('en')">EN</button>
-  <button (click)="setLanguage('fr')">FR</button>
+  <button (click)="setLanguage('en')">EN</button> -
+  <button (click)="setLanguage('fr')">FR</button> -
+  <button (click)="setLanguage('it')">IT</button> -
+  <button (click)="setLanguage('es')">ES</button>
 </div>
